# tup

./: .gitignore  README.md
3d-Models/: Assem1.SLDASM  box.SLDPRT  esp32.SLDPRT  front_panel_devider.SLDPRT  ledStand.SLDPRT  led_spacer.SLDPRT
3d-Models/gcode/: front_panel.gcode  ledStand.gcode
3d-Models/stl/: box.STL  front_panel.STL  front_panel_devider.STL  front_panel_negtive.STL  ledStand.STL  led_spacer.STL
tup-controller/: README.md  platformio.ini
tup-controller/src/: main.cpp  private.h  private.h.example
tup-controller/src/reg/: reg.cpp  reg.h
tup-controller/src/wifi/: wifi.cpp  wifi.h
tup-support-server/: Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  build_prod.sh  build_run_docker.sh  config.json
tup-support-server/src/: coord_gen.rs  cors.rs  json_parser.rs  main.rs
tup-support-server/src/utils/: json_parser.rs
