[package]
name = "tup-support-server"
version = "0.1.0"
authors = ["Vahe <vahegian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
# tokio = { version = "1", features = ["full", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0" 
futures = "0.3"
chrono = "0.4.19"