[package]
name = "tup-support-server"
version = "0.1.0"
authors = ["Vahe <vahegian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }